<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0
                             https://maven.apache.org/xsd/maven-4.0.0.xsd">
  <!-- Agregador / BOM -->
  <modelVersion>4.0.0</modelVersion>

  <groupId>com.ciro</groupId>
  <artifactId>jreactive-parent</artifactId>
  <version>0.0.1-SNAPSHOT</version>
  <packaging>pom</packaging>


  <!-- ⬇︎ mismos valores para todos los hijos -->
  <properties>
    <java.version>21</java.version>
    <spring-boot.version>3.2.5</spring-boot.version>
    <auto-service.version>1.1.1</auto-service.version>
    <archunit.version>1.3.0</archunit.version>
  </properties>

  <!-- import del BOM de Spring-Boot -->
  <dependencyManagement>
    <dependencies>
      <dependency>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-dependencies</artifactId>
        <version>${spring-boot.version}</version>
        <type>pom</type>
        <scope>import</scope>
      </dependency>  
      
      <dependency>
          <groupId>com.tngtech.archunit</groupId>
          <artifactId>archunit-junit5</artifactId>
          <version>${archunit.version}</version>
          <scope>test</scope>
      </dependency>
      
    </dependencies>
  </dependencyManagement>

  <!-- Los dos sub-módulos -->
  <modules>
    <module>jreactive-apt</module>
    <module>jreactive-starter-spring</module>
    <module>jreactive-core</module>
    <module>jreactive-runtime-js</module> 
    <module>jreactive-demo-spring</module>
    <module>jreactive-standalone</module>
    <module>jreactive-runtime-jvm</module>
    <module>jreactive-store-redis</module>
  </modules>

  <build>
	<resources>
        <resource>
            <directory>src/main/resources</directory>
        </resource>
        <resource>
            <directory>src/main/java</directory>
            <includes>
                <include>**/*.css</include>
                <include>**/*.js</include>
                <include>**/*.html</include>
                <include>**/*.png</include> 
                <include>**/*.svg</include>
            </includes>
        </resource>
    </resources>  
	  
    <pluginManagement>
      <plugins>
        <!-- Forzamos 3.8.1 solo aquí;
             los módulos hijos heredan la versión -->
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-compiler-plugin</artifactId>
          <version>3.8.1</version>
          <configuration>
            <source>${java.version}</source>
            <target>${java.version}</target>
          </configuration>
        </plugin>
        
       
        
      </plugins>
    </pluginManagement>
  </build>

</project>
